[package]
name = "rust-dungeoncrawler"
version = "0.1.0"
authors = ["James Tingen <jotingen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "~1"
rand = "~0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sm = "0.9.0"
textwrap = "~0.13"
convert_case = "0.4.0"
unicode-segmentation = "1.7.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
